tests/baselines/reference/nestedModuleExports.errors.txt
tests/cases/conformance/jsdoc/not-iife.js(5,9): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
tests/cases/conformance/jsdoc/not-iife.js(6,9): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
tests/cases/conformance/jsdoc/not-iife.js(8,9): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
tests/cases/conformance/jsdoc/test.js(2,1): error TS2304: Cannot find name 'ShouldNotBeGlobal'.


==== tests/cases/conformance/jsdoc/not-iife.js (3 errors) ====
    var ShouldBeGlobal = 0;
    function f(type, ctor, exports) {
        if (typeof exports !== "undefined") {
            exports.a = ctor;
            module.exports.b = ctor;
            ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
            module.exports = { ctor };
            ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
            exports = { ctor };
            module.exports["c"] = type;
            ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
        }
    }
    
==== tests/cases/conformance/jsdoc/iife.js (0 errors) ====
    var ShouldNotBeGlobal = 0;
    (function () {
        exports.a = "b";
    })();
    
==== tests/cases/conformance/jsdoc/test.js (1 errors) ====
    ShouldBeGlobal;
    ShouldNotBeGlobal;
    ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ShouldNotBeGlobal'.
    